Bug 520837 - Address Ts regression from aero landing. r=robarnold.